[tool.poetry]
name = "voxpop"
version = "0.1.0"
description = ""
authors = ["mttesla <fincher0307@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.9.2"
fastapi = "^0.115.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
